# eic_beam_shape

./: .gitignore  CMakeLists.txt  README.md  run.py
cards/: eAu_18x110_Tab3p5.ini  eAu_5x41_Tab3p5.ini  ep_10x100_Tab3p3.ini  ep_18x275_Tab3p3.ini  ep_5x41_Tab3p3.ini
include/: bunch.h  sim.h
macro/: fit_xyz.py
python/: beam_lin.py  plot_utils.py  read_con.py
src/: bunch.cxx  sim.cxx
